--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="Contact.css" />
   
 
-  <title>Contact Me - Bradley Acosta</title>
+  <title>Contact Me</title>
   
 </head>
 <body>
@@ -15,12 +15,11 @@
  
   <div class = "ContactMe">
 
-       <div class = "BackgroundBaseColor">
+    <div class = "BackgroundBaseColor">
 
   <div class = "ContactDes">Contact Me</div>
   <div class = "ContactText">Whether you have a job opportunity or looking to hire please feel free to reach out through the contact details below!</div>
 <div class="Vector7" ></div>
-<br>
 
   <div class="contact-info">
     <p><strong>Email:</strong> <a href="mailto:bradleyacosta00@outlook.com">bradleyacosta00@outlook.com</a></p>
