--- a/Projects.html
+++ b/Projects.html
@@ -13,8 +13,8 @@
     <nav class="CTA">
         <ul class="nav__links">
             <a href="index.html">
-                <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
-                <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
+                <img class="Image7" src="logo.svg"></a>
+                <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px #004d4d"></div>
 
             </a>
             <li><a href="Projects.html">Project 1</a></li>
@@ -59,13 +59,13 @@
             <span class ="NodePackageText">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the world’s largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:<br/>•The website  allows you to find third-party packages, set up profiles, and manage your packages.<br/>•The command-line interface or NPM CLI that runs from a terminal to allow you to interact with NPM.<br/>•The registry is a large public database of JavaScript code.</span>
         </div>
         
-        <div class="Vector4" style="width: 1654px; height: 0px; left: 133px; top: 757px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector6" style="width: 168.01px; height: 0px; left: 135px; top: 994px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector9" style="width: 168.01px; height: 0px; left: 121px; top: 1706px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector10" style="width: 149px; height: 0px; left: 674px; top: 2225px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector7" style="width: 365.50px; height: 0px; left: 647px; top: 1123px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector8" style="width: 351px; height: 0px; left: 1079px; top: 1406px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 133px; top: 3352px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector4" style="width: 1654px; height: 0px; left: 133px; top: 757px; position: absolute; border: 2px #004d4d solid"></div>
+        <div class="Vector6" style="width: 168.01px; height: 0px; left: 135px; top: 994px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px #004d4d solid"></div>
+        <div class="Vector9" style="width: 168.01px; height: 0px; left: 121px; top: 1706px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px #004d4d solid"></div>
+        <div class="Vector10" style="width: 149px; height: 0px; left: 674px; top: 2225px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px w#004d4d solid"></div>
+        <div class="Vector7" style="width: 365.50px; height: 0px; left: 647px; top: 1123px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px #004d4d solid"></div>
+        <div class="Vector8" style="width: 351px; height: 0px; left: 1079px; top: 1406px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px #004d4d solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 133px; top: 3352px; position: absolute; border: 2px #004d4d solid"></div>
 
         <div class="SomeOfNpms" >
            <span class ="SomeNpmLibraries">Some of NPM Libraries we used<br/></span>
