--- a/Projects2.html
+++ b/Projects2.html
@@ -11,9 +11,7 @@
         <nav class="CTA">
             <ul class="nav__links">
                 <a href="index.html">
-                    <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
-                    <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
-    
+                    <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>    
                 </a>
                 <li><a href="Projects.html">Project 1</a></li>
                 <li><a href="Projects2.html">Project 2</a></li>
@@ -22,7 +20,6 @@
             </ul>
         </nav>
     </header>
-      <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 71px; position: absolute; border: 2px white solid"></div>
 
       
     <div class="Proyecto2" >
@@ -48,9 +45,9 @@
         </div>
         <img class="Image21" style="width: 570px; height: 355px; left: 33px; top: 1850px; position: absolute"  src="public/images/image-21.png" />
         <img class="Image22" style="width: 519px; height: 326px; left: 33px; top: 2328px; position: absolute" src="public/images/image-22.png" />
-        <div class="Vector4" style="width: 1654px; height: 0px; left: 150px; top: 1653px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 2699px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector6" style="width: 1654px; height: 0px; left: 150px; top: 4597px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector4" style="width: 1654px; height: 0px; left: 150px; top: 1653px; position: absolute; border: 2px #004d4d  solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 2699px; position: absolute; border: 2px #004d4d  solid"></div>
+        <div class="Vector6" style="width: 1654px; height: 0px; left: 150px; top: 4597px; position: absolute; border: 2px #004d4d  solid"></div>
         <div class="PolytechnicUniversity">Polytechnic University Of Puerto Rico(OC)</div>
         <div class="StudentSystem">Student System Management Project<br/></div>
         <div class="WorkedWithLucidchart">Worked with LucidChart</div>
@@ -84,8 +81,8 @@
         <div class="InTotal"><span style="display: list-item; margin-left: 1em;">In total I worked with 6 TABLES saving different information and saving: videos, images, and more... for each user accounts</span></div>
 
         <img class="Image29" style="width: 270px; height: 295px; left: 1550px; top: 7582px; position: absolute" src="public/images/image-29.png" />
-        <div class="Vector7" style="width: 1654px; height: 0px; left: 150px; top: 6482px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 8020px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector7" style="width: 1654px; height: 0px; left: 150px; top: 6482px; position: absolute; border: 2px #004d4d solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 8020px; position: absolute; border: 2px #004d4d  solid"></div>
         <div class="Results">Results: </div>
         <img class="Image30" style="width: 621px; height: 902px; left: 243px; top: 8146px; position: absolute" src="public/images/image-30.png" />
         <img class="Image31" style="width: 622px; height: 578px; left: 1000px; top: 8498px; position: absolute" src="public/images/image-31.png" />
