--- a/Projects2.html
+++ b/Projects2.html
@@ -11,7 +11,7 @@
         <nav class="CTA">
             <ul class="nav__links">
                 <a href="index.html">
-                    <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>    
+                    <img class="Image7" src="logo.svg"></a>    
                 </a>
                 <li><a href="Projects.html">Project 1</a></li>
                 <li><a href="Projects2.html">Project 2</a></li>
