--- a/About.html
+++ b/About.html
@@ -17,9 +17,9 @@
         <ul class="nav__links">
           <div class ="Image1">
             <a href="index.html">
-                <img class="Image7" src="logo.svg"></a>
+                <img class="Image7" src="logo.svg">
+              </a>
               </div>
-            </a>
 
             <li><a href="Projects.html">Project 1</a></li>
             <li><a href="Projects2.html">Project 2</a></li>
