Changing projects section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </div>
           <nav class="CTA">
             <ul class="nav__links">
-              <li><a href="Projects.html">Project 1</a></li>
-              <li><a href="Projects2.html">Project 2</a></li>
+              <li><a href="Projects.html">Projects</a></li>
               <li><a href="About.html">About</a></li>
               <li><a href="Contact.html">Contact</a></li>
             </ul>
