--- a/About.html
+++ b/About.html
@@ -21,8 +21,7 @@
               </a>
               </div>
 
-            <li><a href="Projects.html">Project 1</a></li>
-            <li><a href="Projects2.html">Project 2</a></li>
+            <li><a href="Projects.html">Projects</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contact.html">Contact</a></li>
         </ul>
