Adding Line on header

--- a/About.html
+++ b/About.html
@@ -16,11 +16,10 @@
     <nav class="CTA">
         <ul class="nav__links">
           <div class ="Image1">
-            <a href="index.html">
-                <img class="Image7" src="logo.svg">
+            <a href="index.html" id = "logo-container">
+              <img class="Image7" src="logo.svg">
               </a>
               </div>
-
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contact.html">Contact</a></li>
