--- a/Projects.html
+++ b/Projects.html
@@ -15,18 +15,17 @@
         <div class="Image1">
             <a href="index.html" id = "logo-container">
                 <img class="Image7" src="logo.svg" alt="Logo">
-          
-                <img class="Image7" src="logo.svg">
-            </a>
-        </div>
+                </a>
+            </div>
 
-              <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px #ffffff"></div>
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
+
+<div class="Vector7" ></div>
 
 
 
