--- a/Contact.html
+++ b/Contact.html
@@ -32,16 +32,16 @@
 
 
   <div class="Image1">
-    <a href="index.html">
+    <a href="./">
       <img class="Image7" src="logo.svg"> 
   </a>
   </div>
 
   <nav class="CTA">
     <ul class="nav__links">
-      <li><a href="Projects.html">Projects</a></li>
-      <li><a href="About.html">About</a></li>
-      <li><a href="Contact.html">Contact</a></li>
+      <li><a href="./Projects">Projects</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Contact">Contact</a></li>
     </ul>
   </nav>
 </div>
