--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="Projects.css">
 
 </head>
@@ -13,14 +13,14 @@
   <nav class="CTA">
     <ul class="nav__links">
         <div class="Image1">
-            <a href="index.html" id = "logo-container">
+            <a href="./" id = "logo-container">
                 <img class="Image7" src="logo.svg" alt="Logo">
                 </a>
             </div>
 
-            <li><a href="Projects.html">Projects</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="./Projects">Projects</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Contact">Contact</a></li>
     </ul>
   </nav>
 </header>
