--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="Vector3" ></div>
         
         <div class="Image1">
-            <a href="index.html" id = "logo-container">
+            <a href="./" id = "logo-container">
                 <img class="Image7" src="logo.svg" alt="Logo">
             </a>
         </div>
           <nav class="CTA">
             <ul class="nav__links">
-              <li><a href="Projects.html">Projects</a></li>
-              <li><a href="About.html">About</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+                <li><a href="./Projects">Projects</a></li>
+                <li><a href="./About">About</a></li>
+                <li><a href="./Contact">Contact</a></li>
             </ul>
           </nav>
         </div>
