Fixed how it looks

--- a/About.html
+++ b/About.html
@@ -16,13 +16,13 @@
     <nav class="CTA">
         <ul class="nav__links">
           <div class ="Image1">
-            <a href="./" id = "logo-container">
+            <a href="index.html" id = "logo-container">
               <img class="Image7" src="logo.svg">
               </a>
               </div>
-              <li><a href="./Projects">Projects</a></li>
-              <li><a href="./About">About</a></li>
-              <li><a href="./Contact">Contact</a></li>
+            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
 
