--- a/Projects.html
+++ b/Projects.html
@@ -27,6 +27,12 @@
 
 <div class="Vector7" ></div>
 
+<script src="projects.js"></script>
+<!-- Projects.html -->
+<div class="project-list-container">
+  <h1>My Projects</h1>
+  <ul id="project-list"></ul>
+</div>
 
 
       
