--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
     <p><strong>Email:</strong> <a href="mailto:bradleyacosta00@outlook.com">bradleyacosta00@outlook.com</a></p>
     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/bradley-acosta-382613179/" target="_blank">Bradley's LinkedIn</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/BradleyAcosta" target="_blank">Bradley's GitHub</a></p>
-    <p><strong>Resume:</strong> <a href="Bradley Acosta Rojas Resume 2024 (CS Graduate).pdf" download> Check me out!</a></p>
+    <p><strong>Resume:</strong> <a href="Bradley Acosta Rojas Resume(Web).docx" download> Check me out!</a></p>
  
    <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
 </div>
